// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`content renders 0 1`] = `
Array [
  .c0 {
  content: 0;
}

<div
    className="c0"
  />,
  .c0 {
  content: 0;
}

<div
    className="c0"
  />,
  .c0 {
  content: 0;
}

<div
    className="c0"
  />,
  .c0 {
  content: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`content renders function 1`] = `
Array [
  .c0 {
  content: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  content: has;
}

<div
    className="c0"
  />,
  .c0 {
  content: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  content: has;
}

<div
    className="c0"
  />,
]
`;

exports[`content renders invalid theme path 1`] = `
Array [
  .c0 {
  content: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  content: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  content: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  content: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`content renders negative number 1`] = `
Array [
  .c0 {
  content: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  content: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  content: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  content: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`content renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    content: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    content: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    content: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    content: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    content: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    content: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    content: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    content: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    content: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    content: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    content: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    content: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    content: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    content: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    content: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    content: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`content renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    content: July;
  }
}

@media April {
  .c0 {
    content: August;
  }
}

@media January {
  .c0 {
    content: September;
  }
}

@media April {
  .c0 {
    content: November;
  }
}

@media June {
  .c0 {
    content: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    content: July;
  }
}

@media April {
  .c0 {
    content: August;
  }
}

@media January {
  .c0 {
    content: September;
  }
}

@media April {
  .c0 {
    content: November;
  }
}

@media June {
  .c0 {
    content: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    content: January;
  }
}

@media April {
  .c0 {
    content: December;
  }
}

@media January {
  .c0 {
    content: April;
  }
}

@media April {
  .c0 {
    content: May;
  }
}

@media June {
  .c0 {
    content: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    content: January;
  }
}

@media April {
  .c0 {
    content: December;
  }
}

@media January {
  .c0 {
    content: April;
  }
}

@media April {
  .c0 {
    content: May;
  }
}

@media June {
  .c0 {
    content: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`content renders postitive number 1`] = `
Array [
  .c0 {
  content: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  content: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  content: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  content: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`content renders string 1`] = `
Array [
  .c0 {
  content: July;
}

<div
    className="c0"
  />,
  .c0 {
  content: July;
}

<div
    className="c0"
  />,
  .c0 {
  content: June;
}

<div
    className="c0"
  />,
  .c0 {
  content: June;
}

<div
    className="c0"
  />,
]
`;

exports[`content renders valid theme path 1`] = `
Array [
  .c0 {
  content: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  content: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  content: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  content: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
